Fix hero alignment (#337)

--- a/ui/app/[locale]/home/home.module.css
+++ b/ui/app/[locale]/home/home.module.css
@@ -6,7 +6,7 @@
 
 @media screen and (min-width: 768px) {
     .hero {
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 250px auto;
         grid-template-areas: "graphic content";
         grid-grap: var(--pf-v5-global--spacer--2xl);
         padding: var(--pf-v5-global--spacer--2xl);
